--- a/app/src/main/res/layout/activity_screen_layout.xml
+++ b/app/src/main/res/layout/activity_screen_layout.xml
@@ -20,14 +20,16 @@
             android:id="@+id/include"
             layout="@layout/included_screen_layout_tool_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHeight_percent="0.05"/>
 
         <include
             layout="@layout/included_screen_layout_navi_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.075"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
