--- a/app/src/main/res/layout/activity_screen_topbar.xml
+++ b/app/src/main/res/layout/activity_screen_topbar.xml
@@ -14,62 +14,57 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#A6FFFFFF"/>
+
     <include
         android:id="@+id/include_toolbar"
         layout="@layout/included_screen_layout_tool_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_percent="0.05"/>
 
     <include
         android:id="@+id/include_navi_bar"
         layout="@layout/included_screen_layout_navi_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.075"/>
 
     <View
         android:id="@+id/drag_area"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="0dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHeight_percent="0.075"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/overlayLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#A6FFFFFF"
+        android:layout_height="0dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@id/include_navi_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/include_toolbar">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/hline1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.045" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/hline2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.13" />
-
         <LinearLayout
             android:id="@+id/icon_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:weightSum="6"
-            app:layout_constraintTop_toTopOf="@+id/hline1">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/hline2"
+            app:layout_constraintHeight_percent="0.1">
 
             <ImageView
                 android:id="@+id/wifi_image"
@@ -136,7 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="@+id/hline2">
+            app:layout_constraintTop_toBottomOf="@id/icon_layout">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -153,6 +148,7 @@
                 android:max="255"
                 android:progressDrawable="@drawable/custom_progress" />
         </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
