--- a/app/src/main/res/layout/activity_icon_edu.xml
+++ b/app/src/main/res/layout/activity_icon_edu.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.icon_edu.activity.IconEduActivity"
+    tools:context=".edu_space.icon_edu.activity.IconEduFragment"
     android:background="@color/bgColor1">
 
     <LinearLayout
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/mainNavigationView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -101,7 +101,7 @@
 
     </LinearLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
+    <!--<com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/mainNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -111,6 +111,6 @@
         app:menu="@menu/main_navi_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
