--- a/app/src/main/res/layout/activity_practice_screen_lock_practice.xml
+++ b/app/src/main/res/layout/activity_practice_screen_lock_practice.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <!-- LinearLayout at the top -->
     <LinearLayout
         android:id="@+id/ll"
@@ -24,7 +26,7 @@
             android:layout_height="60dp"
             android:layout_weight="0.5"
             android:text="00:00"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:padding="16dp"/>
 
