--- a/app/src/main/res/layout/activity_find_id_password.xml
+++ b/app/src/main/res/layout/activity_find_id_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1"
-    tools:context=".FindIdPasswordActivity">
+    tools:context=".com.sungkyul.synergy.Login.FindIdPasswordActivity">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/idpw_scrollView"
