--- a/app/src/main/res/layout/fragment_register_password.xml
+++ b/app/src/main/res/layout/fragment_register_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1"
-    tools:context=".fragments.FragmentRegisterPassword">
+    tools:context=".com.sungkyul.synergy.Login.FragmentRegisterPassword">
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
