--- a/app/src/main/res/layout/activity_practice_screen_lock_practice.xml
+++ b/app/src/main/res/layout/activity_practice_screen_lock_practice.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <!-- LinearLayout at the top -->
     <LinearLayout
         android:id="@+id/ll"
@@ -24,7 +26,7 @@
             android:layout_height="60dp"
             android:layout_weight="0.5"
             android:text="00:00"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:padding="16dp"/>
 
@@ -55,87 +57,87 @@
         android:background="@drawable/screenedu_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll">
-    <!-- 툴바 포함 -->
-    <include
-        android:id="@+id/include_toolbar"
-        layout="@layout/included_screen_layout_tool_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <!-- 툴바 포함 -->
+        <include
+            android:id="@+id/include_toolbar"
+            layout="@layout/included_screen_layout_tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <!-- 시간 텍스트뷰 -->
-    <TextView
-        android:id="@+id/time_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="03:55"
-        android:textSize="78sp"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/include_toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="40dp"
-        app:layout_constraintVertical_bias="0.2" />
+        <!-- 시간 텍스트뷰 -->
+        <TextView
+            android:id="@+id/time_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="03:55"
+            android:textSize="78sp"
+            android:textColor="@android:color/black"
+            app:layout_constraintTop_toBottomOf="@id/include_toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="40dp"
+            app:layout_constraintVertical_bias="0.2" />
 
-    <!-- 날짜 텍스트뷰 -->
-    <TextView
-        android:id="@+id/date_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3월 22일 금요일"
-        android:textSize="22sp"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/time_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp" />
+        <!-- 날짜 텍스트뷰 -->
+        <TextView
+            android:id="@+id/date_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3월 22일 금요일"
+            android:textSize="22sp"
+            android:textColor="@android:color/black"
+            app:layout_constraintTop_toBottomOf="@id/time_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp" />
 
-    <!-- 전화 아이콘 이미지뷰 -->
-    <ImageView
-        android:id="@+id/call_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_screen_lock_call"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.2" />
+        <!-- 전화 아이콘 이미지뷰 -->
+        <ImageView
+            android:id="@+id/call_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_screen_lock_call"
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.2" />
 
-    <!-- 카메라 아이콘 이미지뷰 -->
-    <ImageView
-        android:id="@+id/camera_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_screen_lock_camera"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.8" />
+        <!-- 카메라 아이콘 이미지뷰 -->
+        <ImageView
+            android:id="@+id/camera_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_screen_lock_camera"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.8" />
 
-    <!-- 투명 뷰 -->
-    <View
-        android:id="@+id/transparent_view"
-        android:layout_width="450dp"
-        android:layout_height="450dp"
-        android:background="@android:color/transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="0dp" />
+        <!-- 투명 뷰 -->
+        <View
+            android:id="@+id/transparent_view"
+            android:layout_width="450dp"
+            android:layout_height="450dp"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="0dp" />
 
-    <!-- 잠금 아이콘 이미지뷰 -->
-    <ImageView
-        android:id="@+id/lock_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_screen_lock_lock"
-        android:layout_marginBottom="130dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <!-- 잠금 아이콘 이미지뷰 -->
+        <ImageView
+            android:id="@+id/lock_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_screen_lock_lock"
+            android:layout_marginBottom="130dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
