--- a/app/src/main/res/layout/activity_setting2_main.xml
+++ b/app/src/main/res/layout/activity_setting2_main.xml
@@ -20,7 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".MainActivity">
+            tools:context=".home.activity.MainActivity">
 
             <!-- "설정" 텍스트 -->
             <TextView
