--- a/app/src/main/res/layout/activity_check_learning_ability.xml
+++ b/app/src/main/res/layout/activity_check_learning_ability.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1"
-    tools:context=".CheckLearningAbilityActivity">
+    tools:context=".home.activity.CheckLearningAbilityActivity">
 
     <FrameLayout
         android:id="@+id/headerImage"
