--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFEDE1"
-    tools:context=".SplashActivity">
+    tools:context=".home.activity.SplashActivity">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/splash_logo"
