--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1"
-    tools:context=".LearningFragment">
+    tools:context=".com.sungkyul.synergy.home.fragment.LearningFragment">
 
     <ImageView
         android:id="@+id/headerImage"
