--- a/app/src/main/res/layout/fragment_register_id.xml
+++ b/app/src/main/res/layout/fragment_register_id.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1"
-    tools:context=".fragments.FragmentRegisterId">
+    tools:context=".com.sungkyul.synergy.home.fragment.FragmentRegisterId">
 
     <TextView
         android:id="@+id/textView"
