--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -121,26 +121,26 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardView"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/cardView">
 
         <FrameLayout
             android:id="@+id/examResultCardView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintHeight_percent="1"
+            android:background="@drawable/rounded_button"
             app:layout_constraintEnd_toStartOf="@+id/CheckResultCardView"
+            app:layout_constraintHeight_percent="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/rounded_button">
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.sungkyul.synergy.utils.GalaxyButton
                 android:id="@+id/exam_galaxy_button"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -154,10 +154,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
+                    android:fontFamily="@font/pretendard_semibold"
                     android:text="시험결과\n확인하기"
                     android:textAlignment="center"
-                    android:textColor="#333333"
-                    android:fontFamily="@font/pretendard_semibold"/>
+                    android:textColor="#333333" />
 
 
                 <ImageView
@@ -182,7 +182,7 @@
             <com.sungkyul.synergy.utils.GalaxyButton
                 android:id="@+id/check_galaxy_button"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -196,10 +196,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
+                    android:fontFamily="@font/pretendard_semibold"
                     android:text="학습능력\n확인하기"
                     android:textAlignment="center"
-                    android:textColor="#333333"
-                    android:fontFamily="@font/pretendard_semibold" />
+                    android:textColor="#333333" />
 
                 <ImageView
                     android:layout_width="70dp"
@@ -213,5 +213,18 @@
         </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:text="로그아웃"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonContainer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
