--- a/app/src/main/res/layout/fragment_register_phone.xml
+++ b/app/src/main/res/layout/fragment_register_phone.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1"
-    tools:context=".com.sungkyul.synergy.home.fragment.FragmentRegisterNickname">
+    tools:context=".com.sungkyul.synergy.home.fragment.FragmentRegisterPhone">
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -13,9 +14,9 @@
         android:layout_marginTop="26dp"
         android:text="회원가입"
         android:textColor="#000000"
+        android:fontFamily="@font/pretendard_medium"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:fontFamily="@font/pretendard_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,8 +31,9 @@
         app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
     <EditText
-        android:id="@+id/editTextNick"
+        android:id="@+id/editTextPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -39,19 +41,19 @@
         android:layout_marginEnd="40dp"
         android:backgroundTint="#000000"
         android:ems="10"
-        android:hint="이름"
-        android:inputType="text"
+        android:hint="전화번호"
+        android:inputType="phone"
         android:paddingLeft="8dp"
         android:textColor="#000000"
-        android:textColorHint="#8D838383"
         android:fontFamily="@font/pretendard_medium"
+        android:textColorHint="#8D838383"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView" />
 
     <Button
-        android:id="@+id/btnNext_Nickname"
+        android:id="@+id/btnComplete"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
@@ -62,14 +64,14 @@
         android:fontFamily="@font/pretendard_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextNick" />
+        app:layout_constraintTop_toBottomOf="@id/editTextPhone" />
 
     <TextView
         android:id="@+id/textView180"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="이름을\n입력해주세요."
+        android:text="전화번호를\n입력해주세요."
         android:textColor="#000000"
         android:textSize="24sp"
         android:fontFamily="@font/pretendard_bold"
@@ -77,6 +79,5 @@
         app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
