--- a/app/src/main/res/layout/fragment_edu_screen.xml
+++ b/app/src/main/res/layout/fragment_edu_screen.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".utils.edu.EduScreenFragment">
+    tools:context=".utils.edu.EduScreenFragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Canvas -->
     <ImageView
@@ -128,7 +129,7 @@
         </LinearLayout>
 
         <!-- Bottom Dialog -->
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/bottom_dialog"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -146,14 +147,22 @@
                 android:text="제목"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/bottom_dialog_separator"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <View
                 android:id="@+id/bottom_dialog_separator"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginVertical="12dp"
-                android:background="@color/light_grey"/>
+                android:background="@color/light_grey"
+                app:layout_constraintTop_toBottomOf="@id/bottom_dialog_title"
+                app:layout_constraintBottom_toTopOf="@id/bottom_dialog_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
                 android:id="@+id/bottom_dialog_content"
@@ -161,11 +170,22 @@
                 android:layout_height="wrap_content"
                 android:text="내용 내용 내용 내용\n내용 내용 내용 내용 내용 내용\n내용 내용 내용 내용 내용"
                 android:textSize="18sp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/bottom_dialog_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/bottom_sebook_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/sebook_hands"/>
 
     <!-- Gesture Layout -->
     <FrameLayout
