--- a/app/src/main/res/layout/activity_new_screen_practice.xml
+++ b/app/src/main/res/layout/activity_new_screen_practice.xml
@@ -77,6 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:paddingBottom="10dp"
             android:gravity="center"
             android:orientation="vertical">
 
