--- a/app/src/main/res/layout/activity_default_message_first.xml
+++ b/app/src/main/res/layout/activity_default_message_first.xml
@@ -29,7 +29,7 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <ImageView
-        android:id="@+id/sebook_all"
+        android:id="@+id/sebook_basic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
