--- a/app/src/main/res/layout/activity_default_camera_first.xml
+++ b/app/src/main/res/layout/activity_default_camera_first.xml
@@ -39,17 +39,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/sebook_smile"/>
 
-    <ImageView
-        android:id="@+id/sebook_basic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="centerInside"
-        app:layout_constraintTop_toTopOf="@+id/guide"
-        app:layout_constraintBottom_toBottomOf="@+id/guide2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/sebook_basic"/>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/icon_image"
         android:layout_width="match_parent"
@@ -64,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="32sp"
-            android:text="play 스토어"
+            android:text="카메라"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -75,7 +64,7 @@
             android:id="@+id/image"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:src="@drawable/playstore"
+            android:src="@drawable/ic_camera"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text"
@@ -83,6 +72,16 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ImageView
+        android:id="@+id/camera_photo"
+        android:layout_width="450dp"
+        android:layout_height="450dp"
+        android:paddingHorizontal="12dp"
+        android:src="@drawable/no_copyright"
+        app:layout_constraintTop_toTopOf="@id/guide"
+        app:layout_constraintBottom_toBottomOf="@id/guide3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.sungkyul.synergy.utils.edu.EduScreen
         android:id="@+id/edu_screen"
