--- a/app/src/main/res/layout/activity_settings_first.xml
+++ b/app/src/main/res/layout/activity_settings_first.xml
@@ -22,7 +22,7 @@
         app:layout_constraintGuide_begin="357dp" />
 
     <ImageView
-        android:id="@+id/sebook_basic"
+        android:id="@+id/sebook_smile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
@@ -33,7 +33,7 @@
         android:src="@drawable/sebook_smile"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/image_title"
+        android:id="@+id/icon_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="12dp"
